<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_alignParentTop="true"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
	 <TextView 
	     android:id="@+id/textView3" 
	     android:text="@string/dataRecieved" 
	     android:layout_width="wrap_content" 
	     android:layout_height="wrap_content"/>
	 <ListView 
	     android:layout_width="fill_parent" 
	     android:id="@id/android:list"
	     android:layout_height="150dp"/>
	 <TextView 
	     android:layout_height="wrap_content" 
	     android:text="@string/dataToSend" 
	     android:layout_width="wrap_content" 
	     android:id="@+id/textView2"/>
	 <LinearLayout 
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal">
	     <EditText 
	         android:layout_height="wrap_content" 
	         android:layout_width="0dp"
	         android:imeOptions="actionSend"
	         android:layout_weight="1"
	         android:id="@+id/ETSend"/>
	     <Button 
	         android:id="@+id/chat_display_send_btn" 
	         android:layout_height="wrap_content" 
	         android:layout_width="wrap_content"
	         android:enabled="false"
	         android:text="@string/btnSend"/>
	 </LinearLayout>
</LinearLayout>